test/error/parser/enum-unexpected-token.dsk
let Status = enum
    Ok
    42
    Error
end
